objects/Asset.object
<CustomObject>
    <fields>
        <fullName>End_Date_Text__c</fullName>
        <formula>TEXT(MONTH(UsageEndDate)) + &apos;/&apos; + TEXT(DAY(UsageEndDate)) + &apos;/&apos; + TEXT(YEAR(UsageEndDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kiosk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location (LIN)</label>
        <referenceTo>Kiosk__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Product2.Kiosk__r.Network_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Text__c</fullName>
        <formula>TEXT(MONTH(InstallDate)) + &apos;/&apos; + TEXT(DAY(InstallDate)) + &apos;/&apos; + TEXT(YEAR(InstallDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Text</label>
        <type>Text</type>
    </fields>
</CustomObject>